<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_SaveSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/confirmSaveSetting"
        app:layout_constraintStart_toStartOf="@+id/textView_ShowUnlockSecretKeysLikeRightSide"
        app:layout_constraintTop_toBottomOf="@+id/textView_ShowUnlockSecretKeysLikeRightSide" />

    <TextView
        android:id="@+id/textView_ShowUnlockSecretKeysLikeRightSide"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:text="@string/showUnlockKeysLikeRightSide"
        app:layout_constraintStart_toStartOf="@+id/textView_SetUnlockKeys"
        app:layout_constraintTop_toBottomOf="@+id/textView_SetUnlockKeys" />

    <TextView
        android:id="@+id/textView_ReserveMinute"
        android:layout_width="85dp"
        android:layout_height="33dp"
        android:text="@string/laterLock"
        app:layout_constraintStart_toEndOf="@+id/textView_Minute"
        app:layout_constraintTop_toTopOf="@+id/textView_Minute" />

    <EditText
        android:id="@+id/editText_UnlockAnswer"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="@+id/editText_UnlockQuestion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_EnterUnlockAnswer"
        app:layout_constraintTop_toBottomOf="@+id/textView_EnterUnlockAnswer" />

    <TextView
        android:id="@+id/textView_EnterUnlockQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/claimEnterUnlockQuestion"
        app:layout_constraintStart_toStartOf="@+id/numberPicker_ReserveLockMinutes"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker_ReserveLockMinutes" />

    <TextView
        android:id="@+id/textView_UnlockKeys"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView_ShowUnlockSecretKeysLikeRightSide"
        app:layout_constraintTop_toTopOf="@+id/textView_ShowUnlockSecretKeysLikeRightSide" />

    <TextView
        android:id="@+id/textView_EnterUnlockAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/claimEnterUnlockAnswer"
        app:layout_constraintStart_toStartOf="@+id/editText_UnlockQuestion"
        app:layout_constraintTop_toBottomOf="@+id/editText_UnlockQuestion" />

    <EditText
        android:id="@+id/editText_UnlockQuestion"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="@+id/textView_EnterUnlockQuestion"
        app:layout_constraintTop_toBottomOf="@+id/textView_EnterUnlockQuestion" />

    <NumberPicker
        android:id="@+id/numberPicker_ReserveLockMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:theme="@android:style/Theme.Dialog"
        app:layout_constraintStart_toStartOf="@+id/switch_LockStatus"
        app:layout_constraintTop_toBottomOf="@+id/switch_LockStatus" />

    <TextView
        android:id="@+id/textView_SetUnlockKeys"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/noticeEnterUnlockKeys"
        app:layout_constraintStart_toStartOf="@+id/editText_UnlockAnswer"
        app:layout_constraintTop_toBottomOf="@+id/editText_UnlockAnswer" />

    <Switch
        android:id="@+id/switch_LockStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/enable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/minute"
        app:layout_constraintStart_toEndOf="@+id/numberPicker_ReserveLockMinutes"
        app:layout_constraintTop_toTopOf="@+id/numberPicker_ReserveLockMinutes" />


</android.support.constraint.ConstraintLayout>